#cargo-features = ["edition2021"]

[package]
name = "counter_thanga"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9"
solana-program = "=1.9.1"
thiserror = "1.0"


[lib]
crate-type=["cdylib","lib"]